[project]
name = "mnemosyne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "ollama-python>=0.1.2",
    "rich>=14.1.0",
    "textual>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
